--- a/dev-workflow-ui-web-test/pom.xml
+++ b/dev-workflow-ui-web-test/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>ch.ivyteam.workflow</groupId>
     <artifactId>dev-workflow-ui-config-test</artifactId>
-    <version>11.2.0-SNAPSHOT</version>
+    <version>11.2.1</version>
     <relativePath>../maven/config/test</relativePath>
   </parent>
 
@@ -22,13 +22,13 @@
     <dependency>
       <groupId>ch.ivyteam.workflow</groupId>
       <artifactId>dev-workflow-ui</artifactId>
-      <version>11.2.0-SNAPSHOT</version>
+      <version>11.2.1</version>
       <type>iar</type>
     </dependency>
     <dependency>
       <groupId>ch.ivyteam.workflow</groupId>
       <artifactId>dev-workflow-ui-test-data</artifactId>
-      <version>11.2.0-SNAPSHOT</version>
+      <version>11.2.1</version>
       <type>iar</type>
     </dependency>
     <dependency>
