--- a/maven/config/pom.xml
+++ b/maven/config/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>ch.ivyteam.workflow</groupId>
   <artifactId>dev-workflow-ui-config</artifactId>
-  <version>11.2.0-SNAPSHOT</version>
+  <version>11.2.1</version>
   <packaging>pom</packaging>
 
   <properties>
