--- a/maven/config/test/pom.xml
+++ b/maven/config/test/pom.xml
@@ -4,12 +4,12 @@
   <parent>
     <groupId>ch.ivyteam.workflow</groupId>
     <artifactId>dev-workflow-ui-config</artifactId>
-    <version>11.2.0-SNAPSHOT</version>
+    <version>11.2.1</version>
     <relativePath>..</relativePath>
   </parent>
 
   <artifactId>dev-workflow-ui-config-test</artifactId>
-  <version>11.2.0-SNAPSHOT</version>
+  <version>11.2.1</version>
   <packaging>pom</packaging>
 
   <properties>
