--- a/maven/deploy/pom.xml
+++ b/maven/deploy/pom.xml
@@ -4,13 +4,13 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>ch.ivyteam.workflow</groupId>
   <artifactId>dev-workflow-ui-deploy</artifactId>
-  <version>11.2.0-SNAPSHOT</version>
+  <version>11.2.1</version>
   <packaging>pom</packaging>
 
   <parent>
     <groupId>ch.ivyteam.workflow</groupId>
     <artifactId>dev-workflow-ui-config</artifactId>
-    <version>11.2.0-SNAPSHOT</version>
+    <version>11.2.1</version>
     <relativePath>../config</relativePath>
   </parent>
 
