--- a/maven/image-validation/pom.xml
+++ b/maven/image-validation/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>ch.ivyteam.workflow</groupId>
     <artifactId>dev-workflow-ui-config</artifactId>
-    <version>11.2.0-SNAPSHOT</version>
+    <version>11.2.1</version>
     <relativePath>../config</relativePath>
   </parent>
 
@@ -21,7 +21,7 @@
     <dependency>
       <groupId>ch.ivyteam.workflow</groupId>
       <artifactId>${screenshotArtifactId}</artifactId>
-      <version>11.2.0-SNAPSHOT</version>
+      <version>11.2.1</version>
       <type>zip</type>
     </dependency>
   </dependencies>
