--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
   <parent>
     <groupId>ch.ivyteam.workflow</groupId>
     <artifactId>dev-workflow-ui-config</artifactId>
-    <version>11.2.0-SNAPSHOT</version>
+    <version>11.2.1</version>
     <relativePath>maven/config</relativePath>
   </parent>
 
   <groupId>ch.ivyteam.workflow</groupId>
-  <version>11.2.0-SNAPSHOT</version>
+  <version>11.2.1</version>
   <artifactId>dev-workflow-ui-module</artifactId>
   <packaging>pom</packaging>
 
