--- a/dev-workflow-ui/pom.xml
+++ b/dev-workflow-ui/pom.xml
@@ -4,13 +4,13 @@
   <parent>
     <groupId>ch.ivyteam.workflow</groupId>
     <artifactId>dev-workflow-ui-config-iar</artifactId>
-    <version>11.2.1</version>
+    <version>11.2.1-SNAPSHOT</version>
     <relativePath>../maven/config/iar</relativePath>
   </parent>
 
   <groupId>ch.ivyteam.workflow</groupId>
   <artifactId>dev-workflow-ui</artifactId>
-  <version>11.2.1</version>
+  <version>11.2.1-SNAPSHOT</version>
   <packaging>iar</packaging>
 
   <build>
