--- a/maven/dev-workflow-ui-screenshots/pom.xml
+++ b/maven/dev-workflow-ui-screenshots/pom.xml
@@ -4,13 +4,13 @@
 
   <groupId>ch.ivyteam.workflow</groupId>
   <artifactId>dev-workflow-ui-screenshots</artifactId>
-  <version>11.2.1</version>
+  <version>11.2.1-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <parent>
     <groupId>ch.ivyteam.workflow</groupId>
     <artifactId>dev-workflow-ui-config</artifactId>
-    <version>11.2.1</version>
+    <version>11.2.1-SNAPSHOT</version>
     <relativePath>../config</relativePath>
   </parent>
 
